[tool.poetry]
name = "my-package-2"
version = "0.1.0"
description = ""
authors = ["Co Ngo Quang <quangco.ngo@veriserve-vietnam.com>"]
readme = "README.md"
packages = [{include = "my_package_2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
